# php-guide

./: Ajax_Client.htm  Ajax_Server.php  MySQL Syntax.sql  MySQL_Syntax.sql  PHP_Basic_Operation.php  README.md  connect.php  connect_class.php  css_property.css  database.php  database_class.php  delete.php  download.php  forum.php  html_element.htm  index.php  input_array.php  insert.php  login.php  logout.php  mail.php  mysql_syntax.sql  remove.php  sql_practice.sql  temp.html  template.html  update.php  upload.php
Ajax/: flash.htm  time.php
others/: ajax_client.html  css_properties.md  html_elements.md  sql_practice.sql  sql_syntax.sql  template_empty.html  template_solid.html
php/: remove.php  upload.php
rdbms/: practice1.sql  practice2.sql  practice3.odt
rdbms/practice4/: .gitignore  CMakeLists.txt  db.cpp  db.h  db_autotest.cpp  db_autotest.h  main.cpp  main_autotest.cpp  makefile
rdbms/practice4/data/: .gitignore
