cmake_minimum_required(VERSION 3.5)
project(practice4)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -std=c++11")
set(SOURCE_FILES main.cpp db.cpp)
add_executable(practice4 ${SOURCE_FILES})
set(AUTOTEST_SOURCE_FILES main_autotest.cpp db_autotest.cpp)
add_executable(autotest ${AUTOTEST_SOURCE_FILES})
